--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,19 @@
 	"require": {
 		"composer/installers": "~1.0",
 		"mwstake/mediawiki-component-formengine": "1.*"
+	},
+	"require-dev": {
+		"mediawiki/minus-x": "1.1.1",
+		"php-parallel-lint/php-console-highlighter": "0.5.0",
+		"php-parallel-lint/php-parallel-lint": "1.3.1"
+	},
+	"scripts": {
+		"test": [
+			"parallel-lint . --exclude vendor --exclude node_modules",
+			"minus-x check ."
+		],
+		"fix": [
+			"minus-x fix ."
+		]
 	}
 }
