build: Updating eslint-config-wikimedia to 0.29.1
The following rules are failing and were disabled:
* no-jquery/no-done-fail

Change-Id: Ia88c86362b487538fc81624afd528bc79011294e

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
 		"camelcase": "off",
 		"max-len": "off",
 		"no-jquery/no-global-selector": "off",
-		"no-prototype-builtins": "off"
+		"no-prototype-builtins": "off",
+		"no-jquery/no-done-fail": "warn"
 	}
 }
