Update composer.json authors
ERM42827

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,14 @@
 {
 	"name": "mediawiki/forms",
 	"type": "mediawiki-extension",
+	"license": "GPL-3.0-only",
+	"authors": [
+		{
+			"name": "Hallo Welt! GmbH",
+			"email": "info@hallowelt.com",
+			"homepage": "https://www.hallowelt.com"
+		}
+	],
 	"extra": {
 		"installer-name": "Forms"
 	},
