build: Updating eslint-config-wikimedia to 0.32.1
The following rules are failing and were disabled:
* mediawiki/no-unlabeled-buttonwidget

Change-Id: Iac46d8eb56a86bdeb847e187b2421a6bcbcd517f

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
 		"max-len": "off",
 		"no-jquery/no-global-selector": "off",
 		"no-prototype-builtins": "off",
-		"no-jquery/no-done-fail": "warn"
+		"no-jquery/no-done-fail": "warn",
+		"mediawiki/no-unlabeled-buttonwidget": "warn"
 	}
 }
